@@ -2,6 +2,13 @@
 
 	* src/av-cp/renderer-controls.c:
 
+	Block the 'value-changed' signal handlers on the scales when the value
+	is changed by the application rather than user.
+
+2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/renderer-controls.c:
+
 	Implement seeking.
 
 2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>
